--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -28,7 +28,7 @@
 
         <!-- Label -->
         <TextView
-            android:text="Food"
+            android:text="@string/food"
             style="@style/CategoryStyle" />
 
         <!-- Input fields -->
@@ -37,7 +37,10 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:paddingLeft="4dp"
-            android:orientation="vertical">
+            android:paddingRight="4dp"
+            android:orientation="vertical"
+            tools:ignore="RtlSymmetry"
+            android:paddingStart="4dp">
 
             <!-- Name field -->
             <EditText
