--- a/app/src/main/res/menu/activity_shopping_list_drawer.xml
+++ b/app/src/main/res/menu/activity_shopping_list_drawer.xml
@@ -7,6 +7,6 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_power_settings_new"
-            android:title="Log Out" />
+            android:title="@string/log_out" />
     </group>
 </menu>
